<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.opt.mobipag.gui.ActionBar
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/consultar_carteira"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
            android:id="@+id/b_TicketBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/consult_titles"
            android:text="@string/consultar_saldo"/>

    <Button
            android:id="@+id/b_AccountMovements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/consult_movements"
            android:text="@string/consultar_operacoes"/>

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/consultar_validacoes"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

        <ImageButton
                android:id="@+id/b_TicketValidation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/andanteazul"
                android:contentDescription="@string/consultar_validacoes_occ"/>

        <ImageButton
                android:id="@+id/b_TicketValidationSig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/b_TicketValidation"
                android:background="@drawable/andantedourado"
                android:contentDescription="@string/consultar_validacoes_sig"/>
    </RelativeLayout>

</LinearLayout>