<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.opt.mobipag.gui.ActionBar
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/buy_title"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    <!-- <CheckBox -->
    <!-- android:id="@+id/checkBox1" -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_marginTop="25dp" -->
    <!-- android:layout_marginBottom="10dp" -->
    <!-- android:text="@string/buy_check_paragens" /> -->

    <Button
            android:id="@+id/b_Ocasional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/buy_occasional"/>

    <Button
            android:id="@+id/b_Andante24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/buy_andante24"/>

    <Button
            android:id="@+id/b_Assinatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/buy_signature"/>

    <TextView
            android:id="@+id/t_Balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/buy_balance"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TableLayout
                android:id="@+id/table_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </TableLayout>
    </ScrollView>

</LinearLayout>