<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <com.opt.mobipag.gui.ActionBar
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/buyOCtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/buy_signature"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/buy_sig_zones"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <com.opt.mobipag.data.MultiSpinner
                    android:id="@+id/sp_Zones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"/>

            <TextView
                    android:id="@+id/t_ToPay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/buy_oc_total"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                    android:id="@+id/Balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/buy_oc_balance"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Button
                    android:id="@+id/b_BuyOcTickets"
                    android:layout_width="132dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:text="@string/buy_oc_buy"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>