<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <EditText
            android:id="@+id/tf_LoginPin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/pin"
            android:inputType="number"
            android:maxLength="4"
            android:password="true">
    </EditText>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

        <Button
                android:id="@+id/b_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/login_button_login"/>

        <ImageButton
                android:id="@+id/b_Logout"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14dp"
                android:layout_toRightOf="@+id/b_Login"
                android:contentDescription="@string/logout"
                android:src="@drawable/logout"/>
    </RelativeLayout>

</LinearLayout>